# xrap

./: .gitignore  .travis.yml  AUTHORS  README.md  configure.ac
doc/: xrap.txt  xrap_msg.txt
examples/: hello.c
include/: xrap_msg.h
model/: codec_c.gsl  generate  license.xml  xrap_msg.xml
src/: Makefile.am  generate  libxrap.pc.in  xrap_msg.bnf  xrap_msg.c  xrap_msg.xml
